@@ -2,13 +2,12 @@ package pos.java.bora_comer.infra.gateway.user.impl;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.data.domain.*;
-import pos.java.bora_comer.core.domain.User;
+import pos.java.bora_comer.core.domain.user.User;
 import pos.java.bora_comer.core.mapper.user.UserMapper;
 import pos.java.bora_comer.infra.persistence.repository.user.UserRepository;
 import pos.java.bora_comer.infra.persistence.repository.user.entity.UserEntity;
-import pos.java.bora_comer.util.UserTestFactory;
+import pos.java.bora_comer.util.factory.UserTestFactory;
 
 import java.util.List;
 import java.util.Optional;
@@ -37,14 +36,14 @@ class UserSearchGatewayImplTest {
         User user = UserTestFactory.umUserPadrao();
 
         when(userRepository.findById(id)).thenReturn(Optional.of(userEntity));
-        when(userMapper.toDomain(userEntity)).thenReturn(user);
+        when(userMapper.toDomain(userEntity, userEntity.getUserTypeEntity())).thenReturn(user);
 
         Optional<User> result = userSearchGateway.findById(id);
 
         assertTrue(result.isPresent());
         assertEquals("Messi", result.get().getName());
         verify(userRepository, times(1)).findById(id);
-        verify(userMapper, times(1)).toDomain(userEntity);
+        verify(userMapper, times(1)).toDomain(userEntity, userEntity.getUserTypeEntity());
     }
 
     @Test
@@ -70,14 +69,14 @@ class UserSearchGatewayImplTest {
         Page<UserEntity> userEntityPage = new PageImpl<>(List.of(userEntity), pageable, 1);
 
         when(userRepository.findAll(pageable)).thenReturn(userEntityPage);
-        when(userMapper.toDomain(userEntity)).thenReturn(user);
+        when(userMapper.toDomain(userEntity, userEntity.getUserTypeEntity())).thenReturn(user);
 
         Page<User> result = userSearchGateway.findAll(pageable);
 
         assertEquals(1, result.getTotalElements());
-        assertEquals("Messi", result.getContent().get(0).getName());
+        assertEquals("Messi", result.getContent().getFirst().getName());
 
         verify(userRepository, times(1)).findAll(pageable);
-        verify(userMapper, times(1)).toDomain(userEntity);
+        verify(userMapper, times(1)).toDomain(userEntity, userEntity.getUserTypeEntity());
     }
 }
